--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="middle-container">
         <div class="profile" id = "profile">
-          <img  class = "circle" src="https://media-exp1.licdn.com/dms/image/C4E03AQF8-PY0G7ThhQ/profile-displayphoto-shrink_400_400/0/1628718990294?e=1663804800&v=beta&t=cbxiIHbjQnOsF04ZyLOg1xr2OdR_67SKVyKrt37HcIY" alt="my-image">
+          <img  class = "circle" src="" alt="my-image">
           <h2>Hello.</h2>
           <p> I Am Currently Enrolled At The University Of Illinois At Chicago<br>
               My Interests Are Front And Backend Development</p>
