--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="middle-container">
         <div class="profile" id = "profile">
-          <img  class = "circle" src="" alt="my-image">
+          <img  class = "circle" src="IMG-7886.PNG" alt="my-image">
           <h2>Hello.</h2>
           <p> I Am Currently Enrolled At The University Of Illinois At Chicago<br>
               My Interests Are Front And Backend Development</p>
